# unionized-triangles-2

./: .gitignore  CMakeLists.txt  README.md  triangle.h
include/: box.h  constants.h  contourize.h  convex_triangulation.h  edge.h  interpolate_z.h  intersections.h  orientation.h  point.h  pointList.h  print_triangle.h  quad_tree.h  shift_triangle.h  split_triangle.h  stack_list.h  stack_vector.h  static_vector.h  triangle.h  triangle_edges.h  triangulation.h  union.h
src/: union.cpp  union.h
src/contourize/: contourize.cpp  contourize.h
src/data_structures/: box.cpp  quad_tree.cpp
src/debug_utilities/: mostly_equal.cpp  print_triangles.cpp  shift_triangle.cpp
src/intersections/: intersections.cpp  intersections.h
src/orientation/: orientation.cpp
src/shapes/: edge.cpp  edge.h  point.cpp  point.h  triangle.cpp  triangle.h  triangle_edges.cpp  triangle_edges.h
src/triangulation/: triangulation.cpp  triangulation.h
src/utilities/: complete_triangle.cpp  contourize.cpp  convex_triangulation.cpp  interpolate_z.cpp  intersections.cpp  orientation.cpp  pointList.cpp  split_triangle.cpp  triangulation.cpp
tests/: edge_union_cases.cpp  quad_tree_tests.cpp  randomized_union_tests.cpp  simple_triangle_tests.cpp  union_neighbours_tests.cpp  union_tests.cpp  union_tests.h
tests/unit_tests/: contourize_tests.cpp  convex_triangulation_tests.cpp  ear_removal_tests.cpp  edge_direction_intr_tests.cpp  interpolate_z_tests.cpp  intersections_tests.cpp  orientation_tests.cpp  point_in_triangle_tests.cpp  simple_triangle_tests.cpp  split_triangle_tests.cpp  triangulation_tests.cpp
